/*
 * $Id: ChangeLog,v 1.124 2002/03/19 01:07:56 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-03-18 19:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/macro.c
    + Added #include "hbapirdd.h"

  * source/rdd/dbfntx/dbfntx1.c
    * Few type casts for MSVC

  * source/rtl/tgetlist.prg
  * source/rtl/tbrowse.prg
    * Commented stray TraceLog()s
    * More formatting of strange indentation.

2002-03-18 14:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/getexit.ch
    - Removed 2 defines.

  * include/hbapirdd.h
  * source/rdd/dbcmd.c
    + Added USHORT  hb_rddGetCurrentFieldPos( char * szName );

  * include/hbrddntx.h
  * source/rdd/dbfntx/dbfntx1.c
    > Synched with Harbour.

  * source/vm/macro.c
    ! Improved recent fix.

2002-03-18 14:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/getexit.ch
    + Added few missing defines for recent Luiz's post.

  * source/rtl/tgetlist.prg
    * Corrcted formatting.

2002-03-18 12:56 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
   * source/rtl/menuto.prg
     * Added mouse capabilities

2002-03-18 01:48 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     + added compatibility with Clipper 5.3 (FlexFile) memo headers
     bug reported by Walter Negro.

2002-03-17 20:25 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
  * source/rtl/listbox.org
    source/rtl/radiobtn.prg
    source/rtl/radiogpr.prg
    source/rtl/checkbox.prg
    source/rtl/tget.prg
    source/rtl/pushbtn.prg
    source/rtl/tbrowse.prg
    source/rtl/getsys.prg
    source/rtl/tgetsys.prg
    * Added the missing Clip53 Methods and Functions
    % minor fix to Clip53 classes
  * include/hbgetcmt.ch
    * Added the @ Get... Tbrowse command

2002-03-16 22:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbtrace.h